Concluido a renderizacao de filtros do paper.server

--- a/src/Paper/Paper.csproj
+++ b/src/Paper/Paper.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Media.Design.Papers.Rendering\ArgCollection.cs" />
     <Compile Remove="Media.Design.Papers.Rendering\LinkRenderer.cs" />
     <Compile Remove="Media.Design.Papers.Rendering\QueryPathBuilder.cs" />
     <Compile Remove="Media.Design.Papers.Rendering\QueryRenderer.cs" />
