Acrescentado suporte à filtro em Linq, EF e Sequel.

--- a/src/Paper.Host/Paper.Host.csproj
+++ b/src/Paper.Host/Paper.Host.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Server\Demo\BlueprintEntity.cs" />
     <Compile Include="Server\Demo\MenuPaper.cs" />
     <Compile Include="Server\Demo\SampleEntity.cs" />
+    <Compile Include="Server\Demo\PostsPaper.cs" />
     <Compile Include="Server\Demo\UsersPaper.cs" />
   </ItemGroup>
 
