Acrescentado a renderização de links para outros papers

--- a/src/Paper.Host/Paper.Host.csproj
+++ b/src/Paper.Host/Paper.Host.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Server\Demo\MenuPaper.cs" />
     <Compile Include="Server\Demo\SampleEntity.cs" />
     <Compile Include="Server\Demo\PostsPaper.cs" />
+    <Compile Include="Server\Demo\UserPaper.cs" />
     <Compile Include="Server\Demo\UsersPaper.cs" />
   </ItemGroup>
 
