Criacao do pacote Structures com uma colecao melhorada de estruturas dinamicas.

--- a/src/Toolset/Toolset.csproj
+++ b/src/Toolset/Toolset.csproj
@@ -8,10 +8,13 @@
   <ItemGroup>
     <Compile Remove="Application\**" />
     <Compile Remove="Composition\**" />
+    <Compile Remove="Smart\**" />
     <EmbeddedResource Remove="Application\**" />
     <EmbeddedResource Remove="Composition\**" />
+    <EmbeddedResource Remove="Smart\**" />
     <None Remove="Application\**" />
     <None Remove="Composition\**" />
+    <None Remove="Smart\**" />
   </ItemGroup>
 
   <ItemGroup>
