--- a/src/Paper.Host/Client/package.json
+++ b/src/Paper.Host/Client/package.json
@@ -19,7 +19,7 @@
     "di-vue-mask": "^1.1.0",
     "siren-parser": "^6.3.1",
     "v-money": "^0.8.1",
-    "vue": "^2.3.3",
+    "vue": "^2.5.17",
     "vue-axios": "^2.0.2",
     "vue-notifyjs": "^0.4.1",
     "vue-router": "^2.3.1",
@@ -49,6 +49,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.1.0",
     "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
@@ -58,18 +59,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^2.0.0",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
