--- a/src/Paper.Host/Client/package.json
+++ b/src/Paper.Host/Client/package.json
@@ -79,6 +79,7 @@
     "uglify-es": "^3.0.25",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
+    "vue-moment": "^4.0.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "vuex": "^3.0.1",
