--- a/src/Paper.Host/Client/package.json
+++ b/src/Paper.Host/Client/package.json
@@ -17,10 +17,13 @@
     "axios": "^0.17.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "di-vue-mask": "^1.1.0",
+    "electron": "^2.0.9",
+    "fs": "0.0.1-security",
     "siren-parser": "^6.3.1",
     "v-money": "^0.8.1",
     "vue": "^2.5.17",
     "vue-axios": "^2.0.2",
+    "vue-electron": "^1.0.6",
     "vue-notifyjs": "^0.4.1",
     "vue-router": "^2.3.1",
     "vuetify": "^1.2.1"
