Aplicado melhorias no algoritmo do RestAPi.

--- a/src/Inkeeper/Inkeeper.csproj
+++ b/src/Inkeeper/Inkeeper.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Toolset.Serialization\Toolset.Serialization.csproj" />
     <ProjectReference Include="..\Toolset\Toolset.csproj" />
   </ItemGroup>
 
